--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <img class="img-full max-300 rellax" data-rellax-speed="6" src="assets/images/pht/artboard_logo.png">
 <h2 class="color-green center rellax" data-rellax-speed="4">Equilíbrio </h2>
 <h1 class="color-white center rellax" data-rellax-speed="-1">para alta</h1>
-<h1 class="color-white center rellax" data-rellax-speed="-2">performance</h1>
+<h1 class="color-white center rellax" data-rellax-speed="-2"><em>performance</em></h1>
 </div>
 </div>
 </div>
@@ -61,7 +61,7 @@ Vamos lá.
                                 <img src="assets/images/pht/box1.png" class="img-center">
                             </div>
                             <div class="grid-26 px-20 py-20">
-                                <h4 class="color-blue-dark">Gestão do Tempo e Alta Performance</h4>
+                                <h4 class="color-blue-dark">Gestão do Tempo e Alta <i>Performance</i></h4>
                                 <p>Na temporada anterior, vimos a importância da Gestão do Tempo para realização das atividades diárias e o impacto dessa Gestão nos resultados da equipe. <br>É preciso compreender qual impacto teremos nesses resultados quando não dedicamos tempo para orientar, apoiar, desenvolver e sustentar a <i>performance</i> do time. <br>Perceba que tudo está ligado e nenhuma ação é efetiva se não utilizarmos o conjunto de ferramentas que temos da forma correta. </p>
 
                             </div>
@@ -96,7 +96,7 @@ Vamos lá.
             </div>
             <div class="content-800 border-4-green back-white border-radius-30">
                 <div class="px-20 pt-60">
-                    <h3 class="color-blue pb-20 pl-20">Fazer a gestão da operação</h3>
+                    <h3 class="color-blue pb-20 pl-20">Fazer a gestão do time</h3>
                    <div class="equal-height-grid">
                     <div class="grid-18 offset-1">   
           <div class="question question-objective px-20" data-scorm-type="objective" data-scorm-attempt="2" data-scorm-id="question-2">
@@ -108,7 +108,7 @@ Vamos lá.
                             <input id="radio-1c" type="radio" name="question-1" value="C" data-scorm-target="1">
                             <label for="radio-1c"><span style="font-family: Gotham" class="color-blue-dark">De 51% a 75%</span></label>
                             <input id="radio-1d" type="radio" name="question-1" value="D" data-scorm-target="1">
-                            <label for="radio-1d"><span style="font-family: Gotham" class="color-blue-dark">De 75% a à 100%</span></label>
+                            <label for="radio-1d"><span style="font-family: Gotham" class="color-blue-dark">De 76% a à 100%</span></label>
                         </div>
                         <div class="text-center">
                             <button class="btn btn-save disabled" disabled="" style="background: #0066C6">Responder</button>
@@ -144,7 +144,7 @@ Vamos lá.
             </div>
             <div class="content-800 border-4-green back-white border-radius-30">
                 <div class="px-20 pt-60">
-                    <h3 class="color-blue pb-20 pl-20">Fazer a gestão da operação</h3>
+                    <h3 class="color-blue pb-20 pl-20">Fazer a gestão da Operação</h3>
                    <div class="equal-height-grid">
                     <div class="grid-18 offset-1">   
           <div class="question question-objective px-20" data-scorm-type="objective" data-scorm-attempt="2" data-scorm-id="question-2">
@@ -156,7 +156,7 @@ Vamos lá.
                             <input id="radio-2c" type="radio" name="question-1" value="C" data-scorm-target="2">
                             <label for="radio-2c"><span style="font-family: Gotham" class="color-blue-dark">De 51% a 75%</span></label>
                             <input id="radio-2d" type="radio" name="question-1" value="D" data-scorm-target="2">
-                            <label for="radio-2d"><span style="font-family: Gotham" class="color-blue-dark">De 75% a à 100%</span></label>
+                            <label for="radio-2d"><span style="font-family: Gotham" class="color-blue-dark">De 76% a à 100%</span></label>
                         </div>
                         <div class="text-center">
                             <button class="btn btn-save disabled" disabled="" style="background: #0066C6">Responder</button>
@@ -191,7 +191,7 @@ Vamos lá.
             </div>
             <div class="content-800 border-4-green back-white border-radius-30">
                 <div class="px-20 pt-60">
-                    <h3 class="color-blue pb-20 pl-20">Cuidar de questões estratégicas e inovações</h3>
+                    <h3 class="color-blue pb-20 pl-20">Cuidar de questões estratégicas e de inovações</h3>
                    <div class="equal-height-grid">
                     <div class="grid-18 offset-1">   
           <div class="question question-objective px-20" data-scorm-type="objective" data-scorm-attempt="2" data-scorm-id="question-2">
@@ -203,7 +203,7 @@ Vamos lá.
                             <input id="radio-3c" type="radio" name="question-1" value="C" data-scorm-target="3">
                             <label for="radio-3c"><span style="font-family: Gotham" class="color-blue-dark">De 51% a 75%</span></label>
                             <input id="radio-3d" type="radio" name="question-1" value="D" data-scorm-target="3">
-                            <label for="radio-3d"><span style="font-family: Gotham" class="color-blue-dark">De 75% a à 100%</span></label>
+                            <label for="radio-3d"><span style="font-family: Gotham" class="color-blue-dark">De 76% a à 100%</span></label>
                         </div>
                         <div class="text-center">
                             <button class="btn btn-save disabled" disabled="" style="background: #0066C6">Responder</button>
@@ -403,7 +403,7 @@ Mas o que é importante sabermos sobre delegar atividades, que impactam diretame
 
 <div class="back-blue-dark">
 <div class="content-1024 pt-30">
-<h3 class="color-white text-center py-30">E para impulsionar a Performance e dar autonomia para o time, é preciso garantir as <b class="color-green">QUATRO CONVERSAS DE LIDERANÇA</b>.</h3>
+<h3 class="color-white text-center py-30">E para impulsionar a <i>Performance</i> e dar autonomia para o time, é preciso garantir as <b class="color-green">QUATRO CONVERSAS DE LIDERANÇA</b>.</h3>
    <p class="color-white"> Vimos nas temporadas anteriores que nenhuma ação ou planejamento é efetivo se a comunicação não é efetiva. Pensando nisso, e para impulsionar ainda mais a <i>performance</i> do time e proporcionar mais autonomia nas tomadas de decisão e execução das tarefas, é primordial colocar em prática as 4 Conversas de Liderança, que foram vistas em episódios anteriores. Aproveite ao máximo esta ferramenta para auxiliá-lo no acompanhamento e desenvolvimento do seu time. </p>
                    
     
