--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ Mas o que é importante sabermos sobre delegar atividades, que impactam diretame
 <div class="panel">
 <div class="equal-height-grid">
 <div class="grid-20 offset-1">
-    <p class="color-white">Líderes precisam fornecer clareza dos níveis de responsabilização por meio de uma comunicação consistente e contínua para eliminar os pontos de incerteza e criar condições para que a autonomia aconteça. As conversas de alinhamento trazem clareza de quais são os papéis e responsabilidades e do que é sesperado de cada pessoa.</p>
+    <p class="color-white">Líderes precisam fornecer clareza dos níveis de responsabilização por meio de uma comunicação consistente e contínua para eliminar os pontos de incerteza e criar condições para que a autonomia aconteça. As conversas de alinhamento trazem clareza de quais são os papéis e responsabilidades e do que é esperado de cada pessoa.</p>
 </div>
  <div class="grid-12 offset-2">
 <img class="img-full  img-center" src="assets/images/pht/img3.png">
@@ -383,6 +383,7 @@ Mas o que é importante sabermos sobre delegar atividades, que impactam diretame
 
     <div class="back-blue py-50 graphic-bg-green">
         <div class="content-1024">
+			<h3 class="color-blue-dark">E ter controle, é o oposto de dar autonomia?</h3>
             <div class="equal-height-grid">
                 <div class="grid-14 offset-1" data-aos="fade-right">
                     <p>Na verdade, a autonomia e o controle podem ser ações complementares, pois é importante ter um campo onde as pessoas possam agir. Ao mesmo tempo, é necessário acompanhar os resultados do time, tendo parâmetros para indicadores e acompanhamento de metas. Para isso, é importante a implementação de boas ferramentas de controle e uma boa fluidez da informação.</p>
